updates to main doc and modplan

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -34,20 +34,17 @@
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
 
 <p><dt>Lectures<dd><ul>
-<li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a><li><a href="./Seminars/Human-Computer Interaction.html">Human-Computer Interaction</a><li><a href="./Seminars/Composing with Computers 2.html">Composing with Computers 2</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music">Electronic Music</a></ul>
 
 <p><dt>Practicals<dd><ul>
-<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a><li><a href="./Workshops/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./Workshops/Interfacing.html">Interfacing</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2">Modular Synthesis 2</a></ul>
 
-<p><dt>Study Guides<dd><ul>
-<li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a><li><a href="./Study Guides/Audio Analysis and Machine Listening.html">Audio Analysis and Machine Listening</a></ul>
-
-<p><dt>Code Examples<dd><ul>
-<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a><li><a href="./Code Examples/FX Fun.html">FX Fun</a><li><a href="./Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./Code Examples/Buffer Tricks.html">Buffer Tricks</a><li><a href="./Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a></ul>
+<p><dt>Formative Tasks<dd><ul>
+<li><a href="./SSfMT/Tasks/Task 1">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2">Task 2</a> - Due 1/12</ul>
 </dl>
 <h2><a class='anchor' name='News'>News</a></h2>
 
-<p>Software Systems for Music Technology related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
+<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
 <p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
@@ -55,6 +52,6 @@
 <p>09/12/2017 - <a href="https://algorave.com/">LARVA</a>, Guadalajara Mexico
 <p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
-<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a>, next on the 28/03 in Leeds<li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
+<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp</a><br>link::SSfMT::<br>sc version: 3.8.0</div></div></body></html>
