--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -632,7 +632,7 @@ td
   <td class=xl99 width=111 style='width:83pt'>Programing Concepts 1</td>
   <td class=xl99 width=111 style='width:83pt'>UGens 1</td>
   <td class=xl97 width=111 style='width:83pt'>UGens 2</td>
-  <td class=xl100 width=111 style='width:83pt'>Patterns</td>
+  <td class=xl100 width=111 style='width:83pt'>Scheduling and Patterns</td>
   <td class=xl99 width=111 style='width:83pt'>Buses and Ndefs</td>
   <td class=xl99 width=111 style='width:83pt'>Interfacing</td>
   <td class=xl97 width=111 style='width:83pt'>Graphical User Interfaces (GUI)</td>
