--- a/SSfMT.html
+++ b/SSfMT.html
@@ -40,7 +40,7 @@
 <li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2">Modular Synthesis 2</a></ul>
 
 <p><dt>Formative Tasks<dd><ul>
-<li><a href="./SSfMT/Tasks/Task 1">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2">Task 2</a> - Due 1/12</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1</ul>
 </dl>
 <h2><a class='anchor' name='News'>News</a></h2>
 
@@ -49,7 +49,8 @@
 <p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
 <p>11/11/2017 - <a href="http://algomech.com/2017/algorave/">AlgoMech Algorave</a>, Millennium Gallery Live Lates, Sheffield
-<p>09/12/2017 - <a href="https://algorave.com/">LARVA</a>, Guadalajara Mexico
+<p>17/11/2017 - <a href="http://thecrescentyork.com/events/altern8-live-luke-vibert">Altern 8 [live] + Luke Vibert</a>, The Crecent, York
+<p>25/11/2017 - <a href="https://www.facebook.com/tazinstallationUK/">Temporary Autonomous Zones</a>, 3Sixty, Ron Cooke Hub, Heslington East Campus, York
 <p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
