--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -45,7 +45,7 @@
 <h2><a class='anchor' name='Module%20Outline'>Module Outline</a></h2>
 <ul>
 <li><strong>Module</strong>: Software Systems for Music Technology<li><strong>Module Credits</strong>: 20<li><strong>Module Leader</strong>:<ul>
-<li><strong>Name</strong>:Dr Federico Reuben<li><strong>Email</strong>: federico.reuben@york.ac.uk<li><strong>Telephone</strong>: (01904) 32 4132<li><strong>Office</strong>: MRC/002</ul>
+<li><strong>Name</strong>:Dr Federico Reuben<li><strong>Email</strong>: <a href="/mailto:federico.reuben@york.ac.uk">federico.reuben@york.ac.uk</a><li><strong>Telephone</strong>: (01904) 32 4132<li><strong>Office</strong>: MRC/002</ul>
 
 <p><li><strong>Dates</strong>: November 11 2017 - March 26 2018<li><strong>Spaces</strong>: MRC Teaching Room<li><strong>Formative Assessment</strong>: Seminar presentation (week 10 autmn term)<li><strong>Summative Assessment</strong>: Software and Technical Report (week 1 summer term) and Seminar/Showcase (week 2 summer term)<li><strong>Contact Time</strong>: 30 hours (lectures, practicals and seminars).<li><strong>Module Feedback</strong>: Written feedback within 6 weeks of hand-in.</ul>
 <h2><a class='anchor' name='Assessment'>Assessment</a></h2>
