--- a/SSfMT.html
+++ b/SSfMT.html
@@ -28,7 +28,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> Please bring your computer and headphones to class.</div><h2><a class='anchor' name='Module'>Module</a></h2>
+<div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
