--- a/SSfMT/Tasks/Task 2.html
+++ b/SSfMT/Tasks/Task 2.html
@@ -25,6 +25,6 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%202'>Formative Task 2</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%202'>Formative Task 2</a></h2>
 <ol>
-<li>Read pp. 145-169 (Chapter 3.4 - 3.6) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Prepare for your presentation/formative assesment.</ol>
+<li>Read pp. 145-169 (Ch 3.4 - 3.6) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Prepare for your presentation/formative assesment.</ol>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 2.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 2.schelp</a><br>link::SSfMT/Tasks/Task 2::<br>sc version: 3.8.0</div></div></body></html>
