--- a/SSfMT.html
+++ b/SSfMT.html
@@ -23,25 +23,31 @@
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Module'>Module</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
+<ul class='toc'><li class='toc2'><a href='#Module%20Information'>Module Information</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Lectures'>Lectures</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Talks'>Talks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
 <div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
-<dl>
-<dt>Module Information<dd><ul>
+<h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
+<ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
 
-<p><dt>Lectures<dd><ul>
+<p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
+<ul>
 <li><a href="./SSfMT/Lectures/Introduction to Module">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music">Electronic Music</a></ul>
 
-<p><dt>Practicals<dd><ul>
+<p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
+<ul>
 <li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2">Modular Synthesis 2</a></ul>
 
-<p><dt>Formative Tasks<dd><ul>
+<p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
+<ul>
 <li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1</ul>
-</dl>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
