assigment briefs page

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -35,7 +35,7 @@
 <div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
-<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
+<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
@@ -55,6 +55,7 @@
 <p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
 <p>11/11/2017 - <a href="http://algomech.com/2017/algorave/">AlgoMech Algorave</a>, Millennium Gallery Live Lates, Sheffield
+<p>15/11/2017 - <a href="https://www.facebook.com/events/471712389875757/">The KVB live</a>, The Fulford Arms, York
 <p>17/11/2017 - <a href="http://thecrescentyork.com/events/altern8-live-luke-vibert">Altern 8 [live] + Luke Vibert</a>, The Crecent, York
 <p>25/11/2017 - <a href="https://www.facebook.com/tazinstallationUK/">Temporary Autonomous Zones</a>, 3Sixty, Ron Cooke Hub, Heslington East Campus, York
 <p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
