--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -54,12 +54,12 @@
 <h3><a class='anchor' name='Assessment%20Methods'>Assessment Methods</a></h3>
 <ul>
 <li><strong>Formative</strong>:<ol>
-<li>A seminar/presentation (formative assesment).<li>Reading and practical tasks (<a href="./../SSfMT.html#Formative%20Tasks">Formative Tasks</a>).<li>Independent learning.</ol>
+<li><a href="./../SSfMT/Assignment Briefs.html#Formative%20Assesment">Seminar Presentation</a>.<li><a href="./../SSfMT.html#Formative%20Tasks">Reading and practical tasks</a>.<li>Independent learning.</ol>
 
 <p><li><strong>Summative</strong>:<ol>
-<li>A software system (50%) written in the SuperCollider programming language.<li>A technical report (40%)<li>A presentation / performance using the software system (10%).</ol>
+<li>Software system (50%) written in the SuperCollider programming language.<li>Technical report (40%)<li>Presentation/performance using the software system (10%).</ol>
 
-<p>You can read the <strong>Assignment Briefs</strong> <a href="./../Assignment Briefs">here</a>.</ul>
+<p>You can read the <strong>Assignment Briefs</strong> <a href="./../SSfMT/Assignment Briefs.html">here</a>.</ul>
 
 <p><h3><a class='anchor' name='Assessment%20Strategy'>Assessment Strategy</a></h3>
 
