--- a/SSfMT.html
+++ b/SSfMT.html
@@ -39,11 +39,11 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music">Electronic Music</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module">Introduction to Module</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2">Modular Synthesis 2</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
