--- a/SSfMT/Assignment Briefs.html
+++ b/SSfMT/Assignment Briefs.html
@@ -23,15 +23,15 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Assignment%20Briefs'>Assignment Briefs</a></li>
-<ul class='toc'><li class='toc2'><a href='#Formative%20Assesment'>Formative Assesment</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Summative%20Assesment'>Summative Assesment</a></li>
+<ul class='toc'><li class='toc2'><a href='#Formative%20Assessment'>Formative Assessment</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Summative%20Assessment'>Summative Assessment</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Assignment%20Briefs'>Assignment Briefs</a></h2>
-<h3><a class='anchor' name='Formative%20Assesment'>Formative Assesment</a></h3>
+<h3><a class='anchor' name='Formative%20Assessment'>Formative Assessment</a></h3>
 <ol>
-<li><a href="./../SSfMT/Assesment/Presentation">Seminar Presentation</a>
+<li><a href="./../SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a>
 <p><strong>Deadline</strong>: Friday, 1 December 2017, from 9:30-13:15 (in class).</ol>
 
-<p><h3><a class='anchor' name='Summative%20Assesment'>Summative Assesment</a></h3>
+<p><h3><a class='anchor' name='Summative%20Assessment'>Summative Assessment</a></h3>
 <ol>
 <li><em>Software System</em> (50%)
 <p><strong>Deadline</strong>: Monday, 16 April 2017, by 16:00.<li><em>Technical Report</em> (40%)
