--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -54,7 +54,7 @@
 <h3><a class='anchor' name='Assessment%20Methods'>Assessment Methods</a></h3>
 <ul>
 <li><strong>Formative</strong>:<ol>
-<li><a href="./../SSfMT/Assignment Briefs.html#Formative%20Assesment">Seminar Presentation</a>.<li><a href="./../SSfMT.html#Formative%20Tasks">Reading and practical tasks</a>.<li>Independent learning.</ol>
+<li><a href="./../SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a>.<li><a href="./../SSfMT.html#Formative%20Tasks">Reading and practical tasks</a>.<li>Independent learning.</ol>
 
 <p><li><strong>Summative</strong>:<ol>
 <li>Software system (50%) written in the SuperCollider programming language.<li>Technical report (40%)<li>Presentation/performance using the software system (10%).</ol>
