--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -59,7 +59,7 @@
 <p><li><strong>Summative</strong>:<ol>
 <li>Software system (50%) written in the SuperCollider programming language.<li>Technical report (40%)<li>Presentation/performance using the software system (10%).</ol>
 
-<p>You can read the <strong>Assignment Briefs</strong> <a href="./../SSfMT/Assignment Briefs.html">here</a>.</ul>
+<p>You can read all the <strong>Assignment Briefs</strong> <a href="./../SSfMT/Assignment Briefs.html">here</a>.</ul>
 
 <p><h3><a class='anchor' name='Assessment%20Strategy'>Assessment Strategy</a></h3>
 
