Introduction to Module

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -23,12 +23,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Module%20Outline'>Module Outline</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Assessment'>Assessment</a></li>
-<ul class='toc'><li class='toc2'><a href='#Assessment%20Methods'>Assessment Methods</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Strategy'>Assessment Strategy</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Deadlines'>Assessment Deadlines</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#What%20to%20hand%20in'>What to hand in</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#Module%20Overview'>Module Overview</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Module%20Overview'>Module Overview</a></li>
 <ul class='toc'><li class='toc2'><a href='#Module%20Description'>Module Description</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Module%20Aims'>Module Aims</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Module%20Outcomes'>Module Outcomes</a></li>
@@ -36,6 +31,11 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Communication'>Communication</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Independent%20study'>Independent study</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Module%20Plan'>Module Plan</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Assessment'>Assessment</a></li>
+<ul class='toc'><li class='toc2'><a href='#Assessment%20Methods'>Assessment Methods</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Strategy'>Assessment Strategy</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Deadlines'>Assessment Deadlines</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#What%20to%20hand%20in'>What to hand in</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Course%20Materials'>Course Materials</a></li>
 <ul class='toc'><li class='toc2'><a href='#Resources'>Resources</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Reading'>Reading</a></li>
@@ -50,6 +50,28 @@
 <li><strong>Name</strong>:<a href="https://www.york.ac.uk/music/staff/academic/federico-reuben/">Dr Federico Reuben</a><li><strong>Email</strong>: federico.reuben@york.ac.uk<li><strong>Telephone</strong>: (01904) 32 4132<li><strong>Office</strong>: MRC/002</ul>
 
 <p><li><strong>Dates</strong>: November 11 2017 - March 26 2018<li><strong>Spaces</strong>: MRC Teaching Room<li><strong>Formative Assessment</strong>: Seminar presentation (week 10 autumn term)<li><strong>Summative Assessment</strong>: Software and Technical Report (week 1 summer term) and Seminar/Showcase (week 2 summer term)<li><strong>Contact Time</strong>: 30 hours (lectures, practicals and seminars).<li><strong>Module Feedback</strong>: Written feedback within 6 weeks of hand-in.</ul>
+<h2><a class='anchor' name='Module%20Overview'>Module Overview</a></h2>
+<h3><a class='anchor' name='Module%20Description'>Module Description</a></h3>
+
+<p>This module will introduce audio software design and programming concepts for digital synthesis, signal processing and control systems. You will first be introduced to electronic music concepts and their historical and cultural context as well as gaining understanding and hands-on experience in modular synthesis with VCV Rack. You will then be introduced to digital systems and computer music: this will include learning the basics about computer programming and the history of making music with early computers. We will look at the principles of computer programming with a programming language called SuperCollider. SuperCollider is a powerful language for writing real-time audio processing, synthesis and control systems for music and audio. You will learn the basics of SuperCollider and you will design and build your own software systems for music performance, composition and production that will be demonstrated in practice at a showcasing event. This module therefore provides with various learning objectives that are valuable for your future: 1) it will give you an understanding of electronic and computer music principles and historical contexts, 2) you will start learning how to write computer code, which is a highly sought skill that can be transferable across many professions 3) you will have a better understanding of how computer music software works and how it is built, 4) you will gain practical and theoretical knowledge of sound synthesis and signal processing, 5) you will learn how to make your own software systems for performance, composition and production.<h3><a class='anchor' name='Module%20Aims'>Module Aims</a></h3>
+
+<p>This module aims to:<ul>
+<li>provide an introduction to the state of the art in audio software systems for music technology, including the study of different approaches to software design, programming, and their historical context in computer music, popular music production and live electronic performance<li>describe and explain digital sound synthesis and signal processing techniques – how audio effects and synthesis techniques work and what factors influence their sonic character.<li>introduce control systems for music programming, for example those used in algorithmic composition.</ul>
+
+<p><h3><a class='anchor' name='Module%20Outcomes'>Module Outcomes</a></h3>
+
+<p>By the end of the taught part of the project all students should:<ul>
+<li>understand the basics of digital audio synthesis and audio signal processing.<li>have the ability to design and program bespoke software tools for performance, composition and production within computer music programming environments.</ul>
+<h3><a class='anchor' name='Attendance'>Attendance</a></h3>
+
+<p>Attendance to all of the lectures and practicals is mandatory. Attendance will be monitored for each of these sessions. You are expected to be on time to all sessions.<h3><a class='anchor' name='Communication'>Communication</a></h3>
+
+<p>Please check your university email regularly as this will be the primary form of communication between staff and students. Also, check the module materials regularly to access lecture slides, tutorials and exercises, information about deadlines, assignment briefs, reading materials, etc. Before contacting staff members about information, check the module handbook first as most of the module information will be available to you there.<h3><a class='anchor' name='Independent%20study'>Independent study</a></h3>
+
+<p>According to university regulations, the amount of time you should devote to private study for this module is a total of 109 hours, that is at least 8 hours per week outside your assessment preparation. Therefore, during this time you should be engaging with reading material, practicing programming skills, researching on related topics, experimenting with technology and code, etc. This of course does not include your time in seminars, workshops and tutorials. In addition to this, you will be expected to spend at least 60 hours for assessment preparation to prepare your final software, technical report and seminar/showcase. This is the very minimum amount of time of independent study expected from you to pass this module.<h3><a class='anchor' name='Module%20Plan'>Module Plan</a></h3>
+
+<p>You can find the planned sessions including all lectures, practicals, presentations and assessment deadlines by following this link:<ul>
+<li><a href="./../SSfMT/moduleplan.htm">Module Plan</a></ul>
 <h2><a class='anchor' name='Assessment'>Assessment</a></h2>
 <h3><a class='anchor' name='Assessment%20Methods'>Assessment Methods</a></h3>
 <ul>
@@ -81,28 +103,6 @@
 
 <p>You leave off your name because you remain anonymous to the second marker. One folder goes to the module tutor who marks it and then gives it back. The other copy goes to the second marker and is retained for the final examination board in June of your 3rd year. We require two copies of 1st year work. CDs should be in a sleeve and similarly marked for identification. Materials must be presented to professional standards. All work must be clearly and carefully presented and labelled (your exam number must appear on every page). All essays, commentaries and technical reports must be word-processed. In addition, they must be:<ul>
 <li>double spaced<li>on A4 paper (printed on either one side or double-sided)</ul>
-<h2><a class='anchor' name='Module%20Overview'>Module Overview</a></h2>
-<h3><a class='anchor' name='Module%20Description'>Module Description</a></h3>
-
-<p>This module will introduce audio software design and programming concepts for digital synthesis, signal processing and control systems. You will first be introduced to electronic music concepts and their historical and cultural context as well as gaining understanding and hands-on experience in modular synthesis with VCV Rack. You will then be introduced to digital systems and computer music: this will include learning the basics about computer programming and the history of making music with early computers. We will look at the principles of computer programming with a programming language called SuperCollider. SuperCollider is a powerful language for writing real-time audio processing, synthesis and control systems for music and audio. You will learn the basics of SuperCollider and you will design and build your own software systems for music performance, composition and production that will be demonstrated in practice at a showcasing event. This module therefore provides with various learning objectives that are valuable for your future: 1) it will give you an understanding of electronic and computer music principles and historical contexts, 2) you will start learning how to write computer code, which is a highly sought skill that can be transferable across many professions 3) you will have a better understanding of how computer music software works and how it is built, 4) you will gain practical and theoretical knowledge of sound synthesis and signal processing, 5) you will learn how to make your own software systems for performance, composition and production.<h3><a class='anchor' name='Module%20Aims'>Module Aims</a></h3>
-
-<p>This module aims to:<ul>
-<li>provide an introduction to the state of the art in audio software systems for music technology, including the study of different approaches to software design, programming, and their historical context in computer music, popular music production and live electronic performance<li>describe and explain digital sound synthesis and signal processing techniques – how audio effects and synthesis techniques work and what factors influence their sonic character.<li>introduce control systems for music programming, for example those used in algorithmic composition.</ul>
-
-<p><h3><a class='anchor' name='Module%20Outcomes'>Module Outcomes</a></h3>
-
-<p>By the end of the taught part of the project all students should:<ul>
-<li>understand the basics of digital audio synthesis and audio signal processing.<li>have the ability to design and program bespoke software tools for performance, composition and production within computer music programming environments.</ul>
-<h3><a class='anchor' name='Attendance'>Attendance</a></h3>
-
-<p>Attendance to all of the lectures and practicals is mandatory. Attendance will be monitored for each of these sessions. You are expected to be on time to all sessions.<h3><a class='anchor' name='Communication'>Communication</a></h3>
-
-<p>Please check your university email regularly as this will be the primary form of communication between staff and students. Also, check the module materials regularly to access lecture slides, tutorials and exercises, information about deadlines, assignment briefs, reading materials, etc. Before contacting staff members about information, check the module handbook first as most of the module information will be available to you there.<h3><a class='anchor' name='Independent%20study'>Independent study</a></h3>
-
-<p>According to university regulations, the amount of time you should devote to private study for this module is a total of 109 hours, that is at least 8 hours per week outside your assessment preparation. Therefore, during this time you should be engaging with reading material, practicing programming skills, researching on related topics, experimenting with technology and code, etc. This of course does not include your time in seminars, workshops and tutorials. In addition to this, you will be expected to spend at least 60 hours for assessment preparation to prepare your final software, technical report and seminar/showcase. This is the very minimum amount of time of independent study expected from you to pass this module.<h3><a class='anchor' name='Module%20Plan'>Module Plan</a></h3>
-
-<p>You can find the planned sessions including all lectures, practicals, presentations and assessment deadlines by following this link:<ul>
-<li><a href="./../SSfMT/moduleplan.htm">Module Plan</a></ul>
 <h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
