--- a/SSfMT.html
+++ b/SSfMT.html
@@ -8,16 +8,6 @@
 <script src='./prettify.js' type='text/javascript'></script>
 <script src='./lang-sc.js' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='.';</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
- 
-  ga('create', 'UA-101808054-1', 'auto');
-  ga('send', 'pageview');
- 
-</script>
 </head>
 <ul id='menubar'></ul>
 <body onload='fixTOC();prettyPrint()'>
@@ -49,7 +39,7 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module">Introduction to Module</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
@@ -67,6 +57,7 @@
 <p>11/11/2017 - <a href="http://algomech.com/2017/algorave/">AlgoMech Algorave</a>, Millennium Gallery Live Lates, Sheffield
 <p>15/11/2017 - <a href="https://www.facebook.com/events/471712389875757/">The KVB live</a>, The Fulford Arms, York
 <p>17/11/2017 - <a href="http://thecrescentyork.com/events/altern8-live-luke-vibert">Altern 8 [live] + Luke Vibert</a>, The Crecent, York
+<p>22/11/2017 - <a href="https://www.facebook.com/events/286408671866523/">EMOMYork: Electronic Music Open Mic and Forum</a>
 <p>25/11/2017 - <a href="https://www.facebook.com/tazinstallationUK/">Temporary Autonomous Zones</a>, 3Sixty, Ron Cooke Hub, Heslington East Campus, York
 <p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
