modular snyht 1 practical

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -43,7 +43,7 @@
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1">Modular Synthesis 1</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
