ready for 6 Nov

--- a/SSfMT/Tasks/Task 1.html
+++ b/SSfMT/Tasks/Task 1.html
@@ -25,6 +25,6 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%201'>Formative Task 1</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%201'>Formative Task 1</a></h2>
 <ol>
-<li>Read pp. 99-145 (Ch 3 - 3.4) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Start experimenting with <a href="https://vcvrack.com/">VCV Rack</a> and working on your track for your presentation/formative assesment.</ol>
+<li>Read pp. 99-145 (Ch 3 - 3.4) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Start experimenting with <a href="https://vcvrack.com/">VCV Rack</a> and working on your track for your presentation/formative assesment.<li><em>Recommended Reading</em>: pp. 9-53 (Ch 3-4) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51280202840001381">Designing Sound</a> (Farnell 2010)</ol>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 1.schelp</a><br>link::SSfMT/Tasks/Task 1::<br>sc version: 3.8.0</div></div></body></html>
