--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -587,9 +587,9 @@ td
   <td class=xl91 width=111 style='width:83pt'>Introduction to Programming</td>
   <td class=xl91 width=111 style='width:83pt'>Computer Music</td>
   <td class=xl91 width=111 style='width:83pt'>Digital Synthesis<span
-  style='mso-spacerun:yes'>  </span>1</td>
+  style='mso-spacerun:yes'>  </span></td>
   <td class=xl91 width=111 style='width:83pt'>Programming Concepts 2</td>
-  <td class=xl91 width=111 style='width:83pt'>Digital Synthesis 2</td>
+  <td class=xl91 width=111 style='width:83pt'>Digital Effects</td>
   <td class=xl91 width=111 style='width:83pt'>Human Computer Interaction (HCI)</td>
   <td class=xl89 width=111 style='width:83pt'>System integration and testing</td>
   <td class=xl92 width=111 style='width:83pt'>Software (50%) and Technical
