--- a/SSfMT.html
+++ b/SSfMT.html
@@ -35,7 +35,7 @@
 <div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
-<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
+<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
