--- a/SSfMT/Lectures/Introduction to Module.html
+++ b/SSfMT/Lectures/Introduction to Module.html
@@ -36,19 +36,19 @@
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.013.png'/></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.014.png'/></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.015.png'/><br><b>Electronic Components</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.016.png'/><br><b>Mass String Model - wikipedia.org</b></div>
-<div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/2/2b/Damped_spring.gif'/><br><b>Damping - wikipedia.org</b></div>
+<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.016.png'/><br><b>Mass-string model - wikipedia.org</b></div>
+<div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/2/2b/Damped_spring.gif'/><br><b>Underdamped spring–mass system - wikipedia.org</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Circuit.png'/><br><b>Electronic circuit</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Simple_harmonic_oscillator.gif/100px-Simple_harmonic_oscillator.gif'/><br><b>Oscillator - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/7/74/Simple_harmonic_motion_animation.gif'/><br><b>Harmonic Motion - wikipedia.org</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.017.png'/><br><b>Bicycle wheel</b></div>
+<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.017.png'/><br><b>Bicycle wheel - Oscillations</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/e/ea/Simple_Harmonic_Motion_Orbit.gif'/><br><b>Harmonic motion orbit - wikipedia.org</b></div>
 <div class='image'><img src='http://cdn1.askiitians.com/Images/201548-104410177-3862-im-1.gif'/><br><b>Represenation of phase in harmonic motion - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/a/a0/Simple_harmonic_motion_animation_2.gif'/><br><b>Phase difference in harmonic motion - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/8/80/Tuned_circuit_animation_3_300ms.gif'/><br><b>Electronic oscillator - LC circuit - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/1/1a/Fourier_series_square_wave_circles_animation.gif'/><br><b>Representation of odd harmonics (square wave) - wikipedia.org</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.018.png'/><br><b>Analog oscilloscope showing a sine wave</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Voltage Control Oscillator (VCO)</b></div>
+<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Moog Voltage Control Oscillator (VCO)</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.020.png'/><br><b>EMS VCS3</b></div>
 
 <p><a href="https://youtu.be/q67zcFBHGYQ">Putney VCS3 - demo 1973</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.021.png'/><br><b>VCS3 Interface</b></div>
