--- a/SSfMT/Lectures/Introduction to Module.html
+++ b/SSfMT/Lectures/Introduction to Module.html
@@ -48,7 +48,7 @@
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/8/80/Tuned_circuit_animation_3_300ms.gif'/><br><b>Electronic oscillator - LC circuit - wikipedia.org</b></div>
 <div class='image'><img src='https://upload.wikimedia.org/wikipedia/commons/1/1a/Fourier_series_square_wave_circles_animation.gif'/><br><b>Representation of odd harmonics (square wave) - wikipedia.org</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.018.png'/><br><b>Analog oscilloscope showing a sine wave</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Moog Voltage Control Oscillator (VCO)</b></div>
+<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.019.png'/><br><b>Moog Voltage Controlled Oscillator (VCO)</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.020.png'/><br><b>EMS VCS3</b></div>
 
 <p><a href="https://youtu.be/q67zcFBHGYQ">Putney VCS3 - demo 1973</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.021.png'/><br><b>VCS3 Interface</b></div>
