Electronic Music Lecture

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -39,7 +39,7 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
@@ -54,9 +54,7 @@
 
 <p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
-<p>11/11/2017 - <a href="http://algomech.com/2017/algorave/">AlgoMech Algorave</a>, Millennium Gallery Live Lates, Sheffield
-<p>15/11/2017 - <a href="https://www.facebook.com/events/471712389875757/">The KVB live</a>, The Fulford Arms, York
-<p>17/11/2017 - <a href="http://thecrescentyork.com/events/altern8-live-luke-vibert">Altern 8 [live] + Luke Vibert</a>, The Crecent, York
+<p>18/11/2017 - <a href="https://www.facebook.com/events/1987219361565391/">Ting</a>, The Crecent, York
 <p>22/11/2017 - <a href="https://www.facebook.com/events/286408671866523/">EMOMYork: Electronic Music Open Mic and Forum</a>
 <p>25/11/2017 - <a href="https://www.facebook.com/tazinstallationUK/">Temporary Autonomous Zones</a>, 3Sixty, Ron Cooke Hub, Heslington East Campus, York
 <p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
