added link to Electronic Music

--- a/SSfMT/Lectures/Electronic Music.html
+++ b/SSfMT/Lectures/Electronic Music.html
@@ -68,7 +68,9 @@
 <li><a href="http://youtu.be/3YudPg7cbR4">“Mattachin”, 1968</a><li><a href="https://youtu.be/jetzY-W78gg">"Ziwzih Ziwzih OO-OO-OO", 1968</a><li><a href="https://youtu.be/7NWClSykRgQ">“Love without Sound”, White Noise, 1969</a><li><a href="http://youtu.be/F9AkSI_UbIE">“The Wizard Laboratory”, 1972</a><li><a href="http://youtu.be/Hw7VNHbxtU8">“Dance for Noah”, 1971</a></ul>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.021.png'/><br><b>Robert Moog and Herbert Deutsch</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.022.png'/><br><b>Moog with Moogs</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.023.png'/><br><b>Don Buchla with Buchlas</b></div>
+
+<p><a href="http://www.bbc.co.uk/programmes/p0154m0p">Moog Synthesiser Documentary, Tomorrow's World, BBC, 1969</a>
+<p><a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51273648950001381">Trevor Pinch, Analog Days: The Invention and Impact of the Moog Synthesiser, Harvard University Press, 2002</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.023.png'/><br><b>Don Buchla with Buchlas</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.024.png'/><br><b>Walter Carlos with Moog modular</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.025.png'/><br><b>Switched-On Bach album cover, 1968</b></div>
 <div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.026.png'/><br><b>Wendy Carlos with Moog modular</b></div>
